tests/models/snapshots/can_create_with_password@users.snap
---
source: tests/models/users.rs
assertion_line: 54
expression: res
---
Ok(
    Model {
        created_at: DATE,
        updated_at: DATE,
        id: ID
        pid: PID,
        email: "mishaa.pro@proton.me",
        password: "PASSWORD",
        api_key: "lo-PID",
        name: "sirmishaa",
        reset_token: None,
        reset_sent_at: None,
        email_verification_token: None,
        email_verification_sent_at: None,
        email_verified_at: None,
    },
)
